# opustags

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  opuspic2tag.1  opustags.1  opustags.c  opustags.cc
.github/workflows/: ci.yaml  release.yml
doc/: CHANGELOG  opustags.1  sample_audiobook.opustags
src/: actions.cc  actions.h  base64.cc  cli.cc  config.h  config.h.in  dummy.cc  dummy.h  error.cc  log.h  main.cc  ogg.cc  ogg.h  options.cc  options.h  opus.cc  opuspic2tag.cc  opustags.c  opustags.cc  opustags.h  picture.c  picture.cc  picture.h  system.cc  tags.cc  tags.h  tags_handler.h  tags_handlers_errors.cc  tags_handlers_errors.h  version.h.in
src/tags_handlers/: composite_tags_handler.cc  composite_tags_handler.h  export_tags_handler.cc  export_tags_handler.h  external_edit_tags_handler.cc  external_edit_tags_handler.h  import_tags_handler.cc  import_tags_handler.h  insertion_tags_handler.cc  insertion_tags_handler.h  listing_tags_handler.cc  listing_tags_handler.h  modification_tags_handler.cc  modification_tags_handler.h  removal_tags_handler.cc  removal_tags_handler.h  stream_tags_handler.cc  stream_tags_handler.h
t/: CMakeLists.txt  base64.cc  cli.cc  cli.t  emptier  error.cc  gobble.opus  meta.t  ogg.cc  oggdump.cc  opus.cc  opustags.t  screamer  system.cc  tags.t  tap.h  unit.cc
tests/: actions_test.cc  dummy_test.cc  ogg_test.cc  options_test.cc  tags_test.cc
tests/tags_handlers/: composite_tags_handler_test.cc  export_tags_handler_test.cc  import_tags_handler_test.cc  insertion_tags_handler_test.cc  listing_tags_handler_test.cc  modification_tags_handler_test.cc  removal_tags_handler_test.cc  stream_tags_handler_test.cc
